force-app/main/default/objects/ZRH_SincronizacionEndoso__c/ZRH_SincronizacionEndoso__c.object-meta.xml
<CustomObject>
    <label>Sincronización de Endoso</label>
    <nameField>
        <displayFormat>SE-{00000000}</displayFormat>
        <label>Código</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Sincronización de Endosos</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>