force-app/main/default/objects/ZRH_SincronizacionEndoso__c/fields/ZRH_CampoCondicion__c.field-meta.xml
<CustomField>
    <fullName>ZRH_CampoCondicion__c</fullName>
    <description>Cuando en el campo JSON se guarden una lista se debe agregar el campo que hace único en cada item.</description>
    <label>Campo Condición</label>
    <length>255</length>
    <type>Text</type>
</CustomField>