force-app/main/default/objects/ZRH_SincronizacionEndoso__c/fields/ZRH_CampoCondicionDos__c.field-meta.xml
<CustomField>
    <fullName>ZRH_CampoCondicionDos__c</fullName>
    <label>Campo Condición Dos</label>
    <length>255</length>
    <type>Text</type>
</CustomField>