force-app/main/default/objects/ZRH_SincronizacionEndoso__c/fields/ZRH_CampoCondicionTres__c.field-meta.xml
<CustomField>
    <fullName>ZRH_CampoCondicionTres__c</fullName>
    <label>Campo Condición Tres</label>
    <length>255</length>
    <type>Text</type>
</CustomField>