force-app/main/default/objects/ZRH_SincronizacionEndoso__c/fields/ZRH_Estado__c.field-meta.xml
<CustomField>
    <fullName>ZRH_Estado__c</fullName>
    <label>Estado</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Ingresado</fullName>
                <default>true</default>
                <label>Ingresado</label>
            </value>
            <value>
                <fullName>Procesado</fullName>
            </value>
            <value>
                <fullName>Error</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>