force-app/main/default/objects/ZRH_SincronizacionEndoso__c/fields/ZRH_GrupoNegocio__c.field-meta.xml
<CustomField>
    <fullName>ZRH_GrupoNegocio__c</fullName>
    <description>Código Grupo de Negocio para Cuenta Holding</description>
    <label>Código Grupo de Negocio</label>
    <length>4</length>
    <type>Text</type>
</CustomField>