force-app/main/default/objects/ZRH_SincronizacionEndoso__c/fields/ZRH_NombreAtributo__c.field-meta.xml
<CustomField>
    <fullName>ZRH_NombreAtributo__c</fullName>
    <description>Guarda el nombre del atributo que se quiere actualizar</description>
    <label>Nombre de Atributo</label>
    <length>255</length>
    <type>Text</type>
</CustomField>