force-app/main/default/objects/ZRH_SincronizacionEndoso__c/fields/ZRH_NombreCampo__c.field-meta.xml
<CustomField>
    <fullName>ZRH_NombreCampo__c</fullName>
    <description>Guarda el nombre del campo que se va a actualizar.</description>
    <label>Nombre del Campo Salesforce</label>
    <length>255</length>
    <type>Text</type>
</CustomField>