force-app/main/default/objects/ZRH_SincronizacionEndoso__c/fields/ZRH_NombreObjeto__c.field-meta.xml
<CustomField>
    <fullName>ZRH_NombreObjeto__c</fullName>
    <description>Almacenará el nombre del objeto que se desea actualizar.</description>
    <label>Nombre del Objeto</label>
    <length>255</length>
    <type>Text</type>
</CustomField>