force-app/main/default/objects/ZRH_SincronizacionEndoso__c/fields/ZRH_ObservacionError__c.field-meta.xml
<CustomField>
    <fullName>ZRH_ObservacionError__c</fullName>
    <label>Observación Error</label>
    <length>255</length>
    <type>Text</type>
</CustomField>