force-app/main/default/objects/ZRH_SincronizacionEndoso__c/fields/ZRH_Poliza__c.field-meta.xml
<CustomField>
    <fullName>ZRH_Poliza__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Plan de grupo de contrato</label>
    <referenceTo>ContractGroupPlan</referenceTo>
    <relationshipLabel>Sincronización de Endosos</relationshipLabel>
    <relationshipName>SincronizacionEndosos</relationshipName>
    <type>Lookup</type>
</CustomField>