force-app/main/default/objects/ZRH_SincronizacionEndoso__c/fields/ZRH_RunId__c.field-meta.xml
<CustomField>
    <fullName>ZRH_RunId__c</fullName>
    <label>Run Id</label>
    <length>50</length>
    <type>Text</type>
</CustomField>