force-app/main/default/objects/ZRH_SincronizacionEndoso__c/fields/ZRH_TipoCampo__c.field-meta.xml
<CustomField>
    <fullName>ZRH_TipoCampo__c</fullName>
    <description>Guarda s</description>
    <label>Tipo de Campo</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Campo Salesforce</fullName>
            </value>
            <value>
                <fullName>JSON</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>