force-app/main/default/objects/ZRH_SincronizacionEndoso__c/fields/ZRH_TipoEndoso__c.field-meta.xml
<CustomField>
    <fullName>ZRH_TipoEndoso__c</fullName>
    <description>Definición del tipo de endoso que se esta realizando</description>
    <label>Tipo de Endoso</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>ZRH_TipoEndoso</valueSetName>
    </valueSet>
</CustomField>