force-app/main/default/objects/ZRH_SincronizacionEndoso__c/fields/ZRH_TipoObjeto__c.field-meta.xml
<CustomField>
    <fullName>ZRH_TipoObjeto__c</fullName>
    <description>Guarda el tipo de objeto que se quiere actualizar.</description>
    <label>Tipo de Objeto</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Principal</fullName>
            </value>
            <value>
                <fullName>Cobertura</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>