force-app/main/default/objects/ZRH_SincronizacionEndoso__c/fields/ZRH_Valor__c.field-meta.xml
<CustomField>
    <fullName>ZRH_Valor__c</fullName>
    <description>Valor del campo o atributo que se quiere actualizar</description>
    <label>Valor</label>
    <length>255</length>
    <type>Text</type>
</CustomField>