force-app/main/default/objects/ZRH_SincronizacionEndoso__c/fields/ZRH_ValorCondicion__c.field-meta.xml
<CustomField>
    <fullName>ZRH_ValorCondicion__c</fullName>
    <description>Guarda el valor del campo que es condición para actualizar el registro.</description>
    <label>Valor Condición</label>
    <length>255</length>
    <type>Text</type>
</CustomField>