force-app/main/default/objects/ZRH_SincronizacionEndoso__c/fields/ZRH_ValorCondicionDos__c.field-meta.xml
<CustomField>
    <fullName>ZRH_ValorCondicionDos__c</fullName>
    <label>Valor Condición Dos</label>
    <length>255</length>
    <type>Text</type>
</CustomField>