force-app/main/default/objects/ZRH_SincronizacionEndoso__c/fields/ZRH_ValorCondicionTres__c.field-meta.xml
<CustomField>
    <fullName>ZRH_ValorCondicionTres__c</fullName>
    <label>Valor Condición Tres</label>
    <length>255</length>
    <type>Text</type>
</CustomField>