force-app/main/default/objects/ZRH_SincronizacionEndoso__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>ZRH_NombreObjeto__c</columns>
    <columns>ZRH_Folio__c</columns>
    <columns>ZRH_NombreCampo__c</columns>
    <columns>ZRH_NombreAtributo__c</columns>
    <columns>ZRH_Estado__c</columns>
    <columns>ZRH_Valor__c</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>