force-app/main/default/objects/ZRH_SincronizacionEndoso__c/listViews/Endosos_Ingresados.listView-meta.xml
<ListView>
    <fullName>Endosos_Ingresados</fullName>
    <columns>NAME</columns>
    <columns>ZRH_NombreObjeto__c</columns>
    <columns>ZRH_Folio__c</columns>
    <columns>ZRH_NombreCampo__c</columns>
    <columns>ZRH_Estado__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>ZRH_Valor__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>ZRH_Estado__c</field>
        <operation>equals</operation>
        <value>Ingresado</value>
    </filters>
    <label>Endosos Ingresados</label>
</ListView>